--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,7 @@
 {
+  "diagnostic.errorSign": "✘",
+  "diagnostic.warningSign": "",
+  "diagnostic.infoSign": "",
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
     "markdown",
@@ -7,6 +10,10 @@
     "javascript",
     "javascriptreact",
     "json",
-    "html"
-  ]
+    "html",
+    "rust",
+    "sass",
+    "scss"
+  ],
+  "eslint.packageManager": "pnpm"
 }
